Release 1.0.8 with API docs and DSP cleanup
This release bumps DreamVoice to 1.0.8 and adds comprehensive English JavaDoc across the public API. It also refactors DSP filters and service internals for cleaner structure, static constants, and reduced complexity while preserving behavior and improving persistence/logging consistency.