@@ -4,11 +4,15 @@ import fr.dreamin.dreamvoice.api.filter.model.VoiceFilter;
 import fr.dreamin.dreamvoice.api.player.model.VPlayer;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
+/**
+ * DSP audio filter simulating stone cavern multi-tap reverb and low-frequency echo reflections.
+ */
 public final class CaveVoiceFilter implements VoiceFilter {
 
   private static final int BUFFER_SIZE = 16384; // ~340ms memory
@@ -18,6 +22,10 @@ public final class CaveVoiceFilter implements VoiceFilter {
   private static final int TAP_4 = 4800; // ~100ms deep shaft echo
 
   private final Map<UUID, DelayBuffer> delayBuffers = new ConcurrentHashMap<>();
+
+  // ##############################################################
+  // ---------------------- SERVICE METHODS -----------------------
+  // ##############################################################
 
   @Override
   public @NotNull String getId() {
@@ -35,7 +43,7 @@ public final class CaveVoiceFilter implements VoiceFilter {
   }
 
   @Override
-  public short[] process(final @NotNull short[] samples, final @Nullable VPlayer player) {
+  public short[] process(final short @NonNull [] samples, final @Nullable VPlayer player) {
     final var uuid = player != null ? player.getUuid() : new UUID(0, 0);
     final var delay = this.delayBuffers.computeIfAbsent(uuid, k -> new DelayBuffer());
 
@@ -49,14 +57,11 @@ public final class CaveVoiceFilter implements VoiceFilter {
       final var e3 = delay.get(TAP_3);
       final var e4 = delay.get(TAP_4);
 
-      // Raw, jagged stone slap reflections (discrete echoes instead of smooth church wash)
       final var wet = (e1 * 0.45f) + (e2 * 0.35f) + (e3 * 0.28f) + (e4 * 0.22f);
       final var combined = (dry * 0.75f) + (wet * 0.60f);
 
-      // Feedback loop with aggressive dark stone damping
       delay.write(dry + wet * 0.42f);
-
-      output[i] = (short) Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, Math.round(combined)));
+      output[i] = (short) Math.clamp(Math.round(combined), Short.MIN_VALUE, Short.MAX_VALUE);
     }
 
     return output;
@@ -67,13 +72,16 @@ public final class CaveVoiceFilter implements VoiceFilter {
     this.delayBuffers.remove(playerUuid);
   }
 
+  // ###############################################################
+  // ----------------------- PRIVATE METHODS -----------------------
+  // ###############################################################
+
   private static final class DelayBuffer {
     private final float[] buffer = new float[BUFFER_SIZE];
     private int writeIndex = 0;
     private float lpFilter = 0.0f;
 
     void write(final float sample) {
-      // Aggressive high-cut lowpass (cuts high frequencies sharply so only low/mid cavern rumble echoes)
       this.lpFilter = this.lpFilter + 0.18f * (sample - this.lpFilter);
       this.buffer[this.writeIndex] = this.lpFilter;
       this.writeIndex = (this.writeIndex + 1) % BUFFER_SIZE;
@@ -88,6 +96,3 @@ public final class CaveVoiceFilter implements VoiceFilter {
   }
 
 }
-
-
-
