@@ -4,6 +4,7 @@ import fr.dreamin.dreamvoice.api.filter.model.VoiceFilter;
 import fr.dreamin.dreamvoice.api.player.model.VPlayer;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 
 import java.util.UUID;
 
@@ -16,9 +17,15 @@ public final class DisguiseVoiceFilter implements VoiceFilter {
   private static final int SAMPLE_RATE = 48000;
   private static final int GRAIN_SIZE = 1200; // 25ms grains
   private static final float PITCH_FACTOR = 0.76f; // Deep anonymizing shift
+  private static final float TWO_PI = (float) (2.0 * Math.PI);
+  private static final float LFO_INC = (TWO_PI * 38.0f) / SAMPLE_RATE;
 
   private float phase = 0.0f;
   private float lfoPhase = 0.0f;
+
+  // ##############################################################
+  // ---------------------- SERVICE METHODS -----------------------
+  // ##############################################################
 
   @Override
   public @NotNull String getId() {
@@ -31,7 +38,7 @@ public final class DisguiseVoiceFilter implements VoiceFilter {
   }
 
   @Override
-  public short[] process(final @NotNull short[] samples, final @Nullable VPlayer player) {
+  public short[] process(final short @NonNull [] samples, final @Nullable VPlayer player) {
     if (samples.length == 0)
       return samples;
 
@@ -39,35 +46,34 @@ public final class DisguiseVoiceFilter implements VoiceFilter {
     final var grainSize = GRAIN_SIZE;
     final var hopSize = grainSize / 2;
 
-    // 1. Dual-grain pitch shift & formant masking
     for (int i = 0; i < samples.length; i++) {
       final var readPos1 = (int) (this.phase) % grainSize;
       final var readPos2 = (int) (this.phase + hopSize) % grainSize;
 
-      final var window1 = 0.5f * (1.0f - (float) Math.cos(2.0 * Math.PI * readPos1 / grainSize));
-      final var window2 = 0.5f * (1.0f - (float) Math.cos(2.0 * Math.PI * readPos2 / grainSize));
+      final var window1 = 0.5f * (1.0f - (float) Math.cos(TWO_PI * readPos1 / grainSize));
+      final var window2 = 0.5f * (1.0f - (float) Math.cos(TWO_PI * readPos2 / grainSize));
 
-      final var sampleIndex1 = Math.max(0, Math.min(samples.length - 1, i - readPos1 + (int) (readPos1 * PITCH_FACTOR)));
-      final var sampleIndex2 = Math.max(0, Math.min(samples.length - 1, i - readPos2 + (int) (readPos2 * PITCH_FACTOR)));
+      final var sampleIndex1 = Math.clamp(samples.length - 1, 0, i - readPos1 + (int) (readPos1 * PITCH_FACTOR));
+      final var sampleIndex2 = Math.clamp(samples.length - 1, 0, i - readPos2 + (int) (readPos2 * PITCH_FACTOR));
 
       final var s1 = samples[sampleIndex1] * window1;
       final var s2 = samples[sampleIndex2] * window2;
 
       var blended = s1 + s2;
 
-      // 2. Harmonic modulation (38Hz sideband wobble)
+      // Harmonic modulation (38Hz sideband wobble)
       final var mod = 0.88f + 0.12f * (float) Math.sin(this.lfoPhase);
-      this.lfoPhase += (2.0f * (float) Math.PI * 38.0f) / SAMPLE_RATE;
-      if (this.lfoPhase > 2.0f * Math.PI)
-        this.lfoPhase -= (float) (2.0f * Math.PI);
+      this.lfoPhase += LFO_INC;
+      if (this.lfoPhase > TWO_PI)
+        this.lfoPhase -= TWO_PI;
 
       blended *= mod;
 
-      // 3. Subtle soft saturation to disguise vocal harmonics
+      // Subtle soft saturation to disguise vocal harmonics
       final var normalized = blended / 32768.0f;
       final var distorted = (float) Math.tanh(normalized * 1.35f) * 0.85f;
 
-      output[i] = (short) Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, Math.round(distorted * 32767.0f)));
+      output[i] = (short) Math.clamp(Math.round(distorted * 32767.0f), Short.MIN_VALUE, Short.MAX_VALUE);
 
       this.phase += (1.0f - PITCH_FACTOR);
       if (this.phase >= grainSize)
