@@ -4,11 +4,15 @@ import fr.dreamin.dreamvoice.api.filter.model.VoiceFilter;
 import fr.dreamin.dreamvoice.api.player.model.VPlayer;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
+/**
+ * DSP audio filter simulating a classic telephone carbon microphone bandpass (350Hz to 3400Hz).
+ */
 public final class TelephoneVoiceFilter implements VoiceFilter {
 
   // Classic telephone bandpass: 350Hz to 3400Hz
@@ -16,6 +20,10 @@ public final class TelephoneVoiceFilter implements VoiceFilter {
   private static final float LP_ALPHA = 0.360f;
 
   private final Map<UUID, PhoneState> states = new ConcurrentHashMap<>();
+
+  // ##############################################################
+  // ---------------------- SERVICE METHODS -----------------------
+  // ##############################################################
 
   @Override
   public @NotNull String getId() {
@@ -33,7 +41,7 @@ public final class TelephoneVoiceFilter implements VoiceFilter {
   }
 
   @Override
-  public short[] process(final @NotNull short[] samples, final @Nullable VPlayer player) {
+  public short[] process(final short @NonNull [] samples, final @Nullable VPlayer player) {
     final var uuid = player != null ? player.getUuid() : new UUID(0, 0);
     final var state = this.states.computeIfAbsent(uuid, k -> new PhoneState());
 
@@ -42,15 +50,12 @@ public final class TelephoneVoiceFilter implements VoiceFilter {
     for (int i = 0; i < samples.length; i++) {
       final var input = (float) samples[i];
 
-      // High-pass
       final var hp = HP_ALPHA * (state.prevHp + input - state.prevInput);
       state.prevInput = input;
       state.prevHp = hp;
 
-      // Low-pass
       state.prevLp = state.prevLp + LP_ALPHA * (hp - state.prevLp);
 
-      // Telephone line carbon mic non-linear saturation
       var x = state.prevLp / 14000.0f;
       if (x > 1.0f)
         x = 1.0f;
@@ -60,7 +65,7 @@ public final class TelephoneVoiceFilter implements VoiceFilter {
         x = (1.2f * x) - (0.2f * x * x * x);
 
       final var result = x * 18000.0f;
-      output[i] = (short) Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, Math.round(result)));
+      output[i] = (short) Math.clamp(Math.round(result), Short.MIN_VALUE, Short.MAX_VALUE);
     }
 
     return output;
@@ -70,6 +75,10 @@ public final class TelephoneVoiceFilter implements VoiceFilter {
   public void resetState(final @NotNull UUID playerUuid) {
     this.states.remove(playerUuid);
   }
+
+  // ###############################################################
+  // ----------------------- PRIVATE METHODS -----------------------
+  // ###############################################################
 
   private static final class PhoneState {
     float prevInput = 0.0f;
